tests/valid/valid_wildcard_nested_constraints.csl
config WildcardNested {
  target: {
    *: {
      lib_path: string;
      bin_path?: string;
      constraints {
        validate lib_path @contain("temp") ? exists(bin_path) : true;
      };
    };
  };
}
