tests/invalid/invalid_wildcard_constraint_outside_reference.csl
config InvalidWildcardScope {
  app_name: string;
  target: {
    *: {
      lib_path: string;
      constraints {
        validate exists(app_name);
      };
    };
  };
}
